--- a/exercicios/ex002/index.html
+++ b/exercicios/ex002/index.html
@@ -9,7 +9,7 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>vamos interagir</p>
-    <p>gostaria de criar uma conta back end?</p>
+    <p>gostaria de criar uma conta back-end?</p>
 
     
     <h2>saiba como criar uma conta back end para evitar problemas futuros com a sua empresa</h2>
