--- a/exercicios/testes de aplicação/kudipro.html
+++ b/exercicios/testes de aplicação/kudipro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kudiPro - Plataforma de cursos</title>
-    <link rel="stylesheet" href="kudipro.css">
+    <link rel="stylesheet" href="estilos/kudipro.css">
 </head>
 <body>
     <header>
