--- a/exercicios/testes de aplicação/kudipro.html
+++ b/exercicios/testes de aplicação/kudipro.html
@@ -10,10 +10,10 @@
     <header>
         <div class="logo"><span>kudi</span><span>Pro</span></div>
         <nav>
-            <a href="#">Início</a>
-            <a href="#">Cursos</a>
-            <a href="#">Contato</a>
-            <a href=""><img src="perfil.png" alt="" width="20px"></a>
+            <a href="#" class="navegacao">Início</a>
+            <a href="#" class="navegacao">Cursos</a>
+            <a href="#" class="navegacao">Contato</a>
+            <a href="#"><img src="imagem-favicon/perfil.png" alt="" width="20px"></a>
         </nav>
     </header>
     <section class="hero">
@@ -23,16 +23,22 @@
     </section>
     <section id="cursos" class="cursos">
         <div class ="curso">
-            <h3>Desenvolvimento Web</h3>
-            <p>Aprenda HTML, CSS e JavaScript do zero ao avançado.</p>
+            <a href="#" class="link">
+                <h3>Desenvolvimento Web</h3>
+                <p>Aprenda HTML, CSS e JavaScript do zero ao avançado.</p>
+            </a>
         </div>
         <div class="curso">
-            <h3>Design Gráfico</h3>
-            <p>Domine ferramentas como Photoshop e Illustrator.</p>
+            <a href="#" class="link">
+                <h3>Design Gráfico</h3>
+                <p>Domine ferramentas como Photoshop e Illustrator.</p>
+            </a>
         </div>
         <div class="curso">
-            <h3>Marketing Digital</h3>
-            <p>Estratégias de marketing para redes sociais e Google Ads.</p>
+            <a href="#" class="link">
+                <h3>Marketing Digital</h3>
+                <p>Estratégias de marketing para redes sociais e Google Ads.</p>
+            </a>
         </div>
     </section>
 </body>
