--- a/exercicios/testes de aplicação/kudipro.html
+++ b/exercicios/testes de aplicação/kudipro.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <div class="logo"><span>kudi</span><span>Pro</span></div>
+        <button class="menu-toggle" aria-label="Abrir menu">&#9776;</button>
         <nav>
             <a href="#" class="navegacao">Início</a>
             <a href="#" class="navegacao">Cursos</a>
@@ -41,5 +42,13 @@
             </a>
         </div>
     </section>
+    <script>
+        const toggleBtn = document.querySelector('.menu-toggle');
+        const menu = document.querySelector('.menu');
+      
+        toggleBtn.addEventListener('click', () => {
+          menu.classList.toggle('show');
+        });
+      </script>    
 </body>
 </html>
