--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,10 +6,12 @@
     <title>Document</title>
     <style>
         body {
+            height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
-            background-repeat: no-repeat;
+            background-position: center center;
+            background-repeat: repeat-y;
+            background-size: cover;
         }
 
         main {
@@ -32,6 +34,11 @@
     <main>
         <h1>Testando imagens de fundo</h1>
         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nihil reiciendis tempore quia delectus. Reprehenderit, voluptatibus soluta? Recusandae, esse voluptate. Vel ex numquam quis, quia delectus esse quibusdam quisquam accusamus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestias distinctio ex totam corporis, ipsa nobis quidem consectetur officia, incidunt, expedita accusantium ut alias recusandae voluptas aliquam saepe explicabo earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aliquid eum mollitia tempora officia autem error magnam minima. Itaque, ea quod. Doloribus natus neque iusto quod itaque, culpa repudiandae nam!
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, sunt officiis. Soluta ab inventore impedit unde, necessitatibus exercitationem cupiditate eaque aut omnis. Aspernatur pariatur sit eos velit quam iure maxime! lo Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nihil reiciendis tempore quia delectus. Reprehenderit, voluptatibus soluta? Recusandae, esse voluptate. Vel ex numquam quis, quia delectus esse quibusdam quisquam accusamus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestias distinctio ex totam corporis, ipsa nobis quidem consectetur officia, incidunt, expedita accusantium ut alias recusandae voluptas aliquam saepe explicabo earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aliquid eum mollitia tempora officia autem error magnam minima. Itaque, ea quod. Doloribus natus neque iusto quod itaque, culpa repudiandae nam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nihil reiciendis tempore quia delectus. Reprehenderit, voluptatibus soluta? Recusandae, esse voluptate. Vel ex numquam quis, quia delectus esse quibusdam quisquam accusamus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestias distinctio ex totam corporis, ipsa nobis quidem consectetur officia, incidunt, expedita accusantium ut alias recusandae voluptas aliquam saepe explicabo earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aliquid eum mollitia tempora officia autem error magnam minima. Itaque, ea quod. Doloribus natus neque iusto quod itaque, culpa repudiandae nam!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nihil reiciendis tempore quia delectus. Reprehenderit, voluptatibus soluta? Recusandae, esse voluptate. Vel ex numquam quis, quia delectus esse quibusdam quisquam accusamus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestias distinctio ex totam corporis, ipsa nobis quidem consectetur officia, incidunt, expedita accusantium ut alias recusandae voluptas aliquam saepe explicabo earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aliquid eum mollitia tempora officia autem error magnam minima. Itaque, ea quod. Doloribus natus neque iusto quod itaque, culpa repudiandae nam!
         </p>
     </main>
