--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -15,21 +15,20 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
             margin: auto;
-        }
-
-        tr.linha {
-            background-color: beige;
         }
 
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
+            vertical-align: middle;
         }
 
-        td.dado {
-            background-color: aqua;
+        .numero {
+            text-align: right;
         }
     </style>
 </head>
@@ -44,12 +43,12 @@
         <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr class="linha">
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr>
             <td class="dado">A4</td>
