--- a/exercicios/testes de aplicação/index.html
+++ b/exercicios/testes de aplicação/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <title>Avengers </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/style.css">
   <body>
    <header>
      <nav>
