--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -9,10 +9,21 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        h1 {
+            text-align: center;
+        }
+
         table {
             width: 500px;
             border-collapse: collapse;
+            margin: auto;
+        }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
         }
 
         td, th {
@@ -23,6 +34,10 @@
         thead {
             background-color: gray;
             color: white;
+        }
+
+        tbody tr:nth-child(even) {
+            background-color: lightgrey;
         }
 
         tfoot {
@@ -38,10 +53,11 @@
 <body>
     <h1>Uso de Tabelas grandes</h1>
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -86,7 +102,7 @@
                 <td class="num">7 164 788</td>
             </tr>
             <tr>
-                <td>Mranhão</td>
+                <td>Maranhão</td>
                 <td class="num">7 075 181</td>
             </tr>
             <tr>
@@ -124,7 +140,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>210.147.125</strong></td>
             </tr>
         </tfoot>
