--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -89,7 +89,7 @@
                 <td class="num">11 433 957</td>
             </tr>
             <tr>
-                <td>Rion Grande do Sul</td>
+                <td>Rio Grande do Sul</td>
                 <td class="num">11 377 239</td>
             </tr>
             <tr>
