--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -9,14 +9,9 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
-        h1 {
-            text-align: center;
-        }
-
         table {
             width: 500px;
             border-collapse: collapse;
-            margin: auto;
             position: relative;
         }
 
@@ -40,7 +35,7 @@
         thead tr th {
             position: sticky;
             top: -1px;
-            background-color: rgb(56, 51, 51);
+            background-color: rgb(56, 51, 51);;
         }
 
         tbody tr:nth-child(even) {
