--- a/desafios/d14/index.html
+++ b/desafios/d14/index.html
@@ -75,7 +75,7 @@
                 <td class="numero">14</td>
             </tr>
             <tr class="media">
-                <td colspan="4">Média de Exatas</td>
+                <td colspan="4">Médias de Exatas</td>
                 <td class="numero"15>15</td>
             </tr>
             <tr>
